# micromachines

./: .gitignore  CMakeLists-Server.txt  CMakeLists.txt  DOC.md  Dockerfile  README.md  configs.json  main.cpp  map_generator.py
ClientView/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
client_logic/: Scene.cpp  ThreadDrawer.cpp  ThreadDrawer.h  ThreadKeyMonitor.cpp  ThreadKeyMonitor.h  ThreadReceiver.cpp
client_logic/Entities/: Car.cpp  Entity.h
client_views/: ConectView.cpp  ConectView.h  CreateWindow.cpp  MainWindow.cpp  MainWindow.h  conectview.ui
libs/json/: CMakeLists.txt  json.hpp
libs/yaml-cpp/: README.md
lua/: bot.lua
maps/: race_track_1.yml  racing_track_1.json  racing_track_1.tmx  tiles.json  tiles.tsx  track_01.json  track_02.json
model/: CMakeLists.txt  RacingTrack.cpp  RacingTrack.h  Wheel.cpp  Wheel.h  main.cpp
prueba_biblio_dinamica/: CMakeLists.txt  Makefile  gretting.cpp  gretting.h  main.cpp
prueba_biblio_dinamica/count/: CMakeLists.txt  count.c  count.h
prueba_biblio_dinamica/dynamic_lib/: dynamic_lib.h
prueba_biblio_dinamica/gretting/: CMakeLists.txt  gretting.h
prueba_lua/: CMakeLists.txt  Makefile  main.cpp  pruebalua
prueba_lua/plugins/: luatest.lua
prueba_pluggins/: main.cpp
prueba_pluggins/count/: CMakeLists.txt
prueba_pluggins/dynamic_lib/: dynamic_lib.h
prueba_sdl/: CMakeLists.txt  main.cpp
pruebas_qt/: main.cpp  view_manager.cpp  view_manager.h
pruebas_qt/client_views/: ConectView.cpp  ConectView.h  CreateView.cpp  CreateView.h  JoinView.cpp  JoinView.h  MainWindow.cpp  MainWindow.h  StartView.h  WaitView.cpp
qt_views/: CMakeLists.txt  main.cpp  view_manager.cpp  view_manager.h
qt_views/client_views/: ConectView.cpp  ConectView.h  CreateView.cpp  CreateView.h  CreateWindow.h  JoinView.cpp  JoinView.h  MainWindow.cpp  MainWindow.h  StartView.cpp  StartView.h  WaitView.cpp  WaitView.h  WaitWindow.cpp  conectview.ui  createView.ui  joinView.ui  waitView.ui
src/Box2D/: CMakeLists.txt
src/client/: Bot.cpp  Bot.h  CMakeLists.txt  Camera.cpp  Camera.h  Countdown.cpp  Countdown.h  Entities.cpp  Entities.h  GameMain.cpp  GameMain.h  Hud.cpp  Hud.h  LoadingScreen.cpp  LoadingScreen.h  Map.cpp  Map.h  Minimap.cpp  Minimap.h  ModifiersContainer.cpp  ModifiersContainer.h  PauseMenu.h  Scenario.cpp  Scenario.h  Scene.cpp  Scene.h  ScreenEffectDrawer.cpp  ScreenEffectDrawer.h  ScreenRecorder.cpp  ScreenRecorder.h  SoundSystem.cpp  SoundSystem.h  TextDrawer.h  TextureFactory.h  ThreadBot.cpp  ThreadBot.h  ThreadDrawer.cpp  ThreadDrawer.h  ThreadKeyMonitor.cpp  ThreadKeyMonitor.h  (+7 more)
src/client/ClientView/: CMakeLists.txt  mainwindow.h  newmatchview.cpp  newmatchview.h  newmatchview.ui
src/client/Commands/: AddDynamicObject.h  AddModifier.h  AddTile.h  BeginLoadingScreen.h  CarID.h  CarSlowdown.h  Command.cpp  Command.h  CountdownCommand.h  FinishLoadingScreen.h  PlayerFinished.h  RemoveCar.h  RemoveModifier.h  ResetRace.h  ScreenEffect.h  SetBackground.h  SetCarHealth.h  SetLap.h  SetRacePosition.h  SetTotalLaps.h  ShowRestartMenu.h  TileInfo.h  TrackID.h  UpdateCar.h  UpdateDynamicObject.h
src/client/Entities/: Car.cpp  Car.h  CarInfo.h  DynamicEntity.h  Entity.h  Tile.h  TileInfo.h  Track.cpp  Track.h  Wheel.cpp  Wheel.h
src/client/KeyCommands/: DriveCommand.h  FullscreenCommand.h  KeyCommand.cpp  KeyCommand.h  MenuDependantCommand.h  PauseCommand.h  QuitCommand.h  RecordCommand.h
src/client/Menu/: LostConnectionMenu.cpp  LostConnectionMenu.h  Menu.h  NoMenu.cpp  NoMenu.h  PauseMenu.cpp  PauseMenu.h  RestartMenu.cpp  RestartMenu.h
src/client/QT_views/: CMakeLists.txt  ViewManager.cpp  ViewManager.h  Waiter.cpp  Waiter.h  view_manager.cpp  view_manager.h
src/client/QT_views/oldViews/: ConectView.h  JoinView.cpp  JoinView.h  MainWindow.cpp  MainWindow.h  StartView.cpp  WaitView.cpp  WaitView.h  conectview.ui
src/client/QT_views/views/: ConectView.cpp  ConectView.h  CreateView.cpp  CreateView.h  StartView.cpp  StartView.h  WaitView.cpp  connectview.cpp  connectview.h  connectview.ui  mainwindow.ui  menuwindow.cpp  menuwindow.h  menuwindow.ui  startView.ui  waitView.ui
src/client/ServerCommands/: ServerCommand.cpp  ServerCommand.h  SubClasses.h
src/client/ffmpeg/: FormatContext.cpp  OutputFormat.cpp  OutputFormat.h  ThreadWriter.cpp  ThreadWriter.h
src/client/qt_views/: CMakeLists.txt  main.cpp  view_manager.cpp  view_manager.h
src/client/qt_views/client_views/: ConectView.cpp  ConectView.h  CreateView.cpp  CreateWindow.cpp  MainWindow.cpp  MainWindow.h  client_views.pro
src/client/qt_views/views/: JoinView.cpp  JoinView.h  MainWindow.cpp  MainWindow.h  StartView.cpp  StartView.h  WaitView.cpp  WaitView.h  joinView.ui
src/common/: CMakeLists.txt  Configs.cpp  Configs.h  Coordinate.cpp  Coordinate.h  EntityType.h  Key.h  MsgTypes.h  ProtectedQueue.h  ProtocolSocket.cpp  ProtocolSocket.h  Sizes.h  Socket.cpp  Socket.h  SocketError.h  Thread.h
src/model/: Asphalt.cpp  Asphalt.h  Body.h  CMakeLists.txt  Car.cpp  Car.h  CarSpecs.cpp  CarSpecs.h  ContactListener.cpp  ContactListener.h  CountdownTimer.cpp  CountdownTimer.h  DTO_Info.h  Dijkstra.h  Dirt.cpp  Dirt.h  DynamicTrackObject.cpp  DynamicTrackObject.h  FinishLine.cpp  FinishLine.h  FirstFinishLine.cpp  FirstFinishLine.h  FixtureUserData.h  GameRules.cpp  GameRules.h  Grass.h  LapCounter.cpp  (+28 more)
src/server/: CMakeLists.txt  ClientUpdater.cpp  ClientUpdater.h  FramesSyncronizer.h  GameMode.cpp  GameMode.h  GameRules.cpp  GameRules.h  MapLoader.cpp  MapLoader.h  Match.cpp  Match.h  MatchTable.cpp  MatchTable.h  Player.cpp  Player.h  PlugingsManager.cpp  PlugingsManager.h  PluginsManager.cpp  PluginsManager.h  ProtectedList.cpp  ProtectedList.h  ProtectedMap.cpp  ProtectedMap.h  ProtectedQueue.cpp  ProtectedQueue.h  ProtectedQueueError.h  ProtectedQueueMatch.cpp  ProtectedQueueMatch.h  Server.cpp  Server.h  SocketAcceptor.cpp  SocketAcceptor.h  SocketAcceptorError.h  Thread.h  ThreadAcceptor.cpp  ThreadAcceptor.h  ThreadClientEventMonitor.cpp  ThreadClientEventMonitor.h  ThreadIncomingClient.cpp  (+22 more)
stylesheets/: mainStyleSheet.qss
(+111 files in other folders)
